--- a/Develop/package.json
+++ b/Develop/package.json
@@ -2,13 +2,15 @@
   "name": "ls",
   "version": "1.0.0",
   "main": "server.js",
+  "watch": "nodemon server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nodemon": "^2.0.4"
   },
   "description": ""
 }
